# taohash

./: .env.example  .env.validator.example  .gitignore  Dockerfile  Dockerfile.miner  LICENSE  README.md  docker-compose.yml  publish_lightning_address.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml
changelog/: v0.2.0.md  v0.2.1.md  v0.3.0.md
contrib/: CONTRIBUTING.md
docker/: Dockerfile  docker-compose.yml
docs/: running_braiins_miner.md  running_braiins_validator.md  running_miner.md  running_validator.md  tides_faq.md
neurons/: miner.py
proxy/: README.md  __init__.py
proxy/config/: config.toml
proxy/docker/: .env.example
proxy/scripts/: generate_token.py
proxy/src/: main.py
proxy/src/api/: app.py
proxy/src/core/: miner_session.py  pool_session.py
taohash/: chain_data.py  constants.py  hash_price.py  node.py  utils.py
taohash/chain_data/: chain_data.py  types.json  weights_schedule.py
taohash/core/: constants.py  utils.py
taohash/core/chain_data/: miner_info.py  pool_info.py  types.json
taohash/core/pool/: __init__.py  api.py  config.py  metrics.py  pool.py
taohash/core/pool/braiins/: __init__.py  api.py  config.py  pool.py
taohash/core/pool/braiins/primary_pool/: api.py
taohash/core/pool/metrics/: __init__.py  base.py  braiins.py  evaluation.py  proxy.py  taohash_proxy.py
taohash/core/pool/proxy/: __init__.py  api.py  config.py  pool.py
taohash/core/pricing/: __init__.py  coingecko.py  coinmarketcap.py  hash_price.py  network_stats.py  price.py
taohash/core/storage/: __init__.py  base_storage.py  json_storage.py  redis_storage.py  utils.py
taohash/miner/: .env.miner.example  __init__.py  allocation.py  braiins.py  miner.py  miner_with_proxy.py  mining_scheduler.py  models.py  scheduler.py  storage.py  taohash_miner.py  taohash_mining_info.py
taohash/miner/manager/: __init__.py  base.py  proxy.py
taohash/miner/proxy/: __init__.py  api.py  base.py  braiins.py
taohash/miner/proxy/braiins_farm/: Dockerfile  controller.py  docker-compose.yml  entrypoint.sh
taohash/miner/proxy/taohash_proxy/: controller.py
taohash/miner/proxy/taohash_proxy/config/: config.toml.example
taohash/pool/: __init__.py  api.py  metrics.py  pool.py
taohash/pool/braiins/: __init__.py  api.py  config.py  pool.py
taohash/pricing/: __init__.py  coingecko.py  coinmarketcap.py  hash_price.py  hashprice.py  price.py
taohash/validator/: .env.validator.example  __init__.py  braiins.py  inhouse_proxy.py  storage.py  taohash_proxy.py  taohash_validator.py  validator.md  validator.py
taohash/validator/pool/: api.py  metrics.py  pool.py
taohash/validator/pool/braiins/: api.py  pool.py
tests/integration_tests/: test_pricing.py  test_storage.py
tests/unit_tests/: test_coin_pricing.py  test_metrics.py  test_payout_percentage.py  test_pricing.py
validator/: __init__.py  braiins.py  validator.md  validator.py
(+17 files in other folders)
