[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taohash"
version = "0.1.0" 
description = "TAO Hash Mining Rental Subnet"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Latent Holdings", email = "taohash@latent.to"}
]
dependencies = [
    "bittensor~=9.4.0",
    "ratelimit==2.2.1",
    "cachetools==5.3.1",
    "tabulate~=0.9.0",
    "python-dotenv>=0.21.0",
    "backoff==2.2.1",
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "responses==0.25.7",
    "ruff==0.11.7"
]

[tool.flit.metadata]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/latent-to/taohash"
Repository = "https://github.com/latent-to/taohash.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "responses",
    "pytest-cov",
]

[tool.setuptools]
packages = ["taohash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"